tests/macros/checkbox/extension.stderr
error: option `extension` does not exist for kind `checkbox`
 --> $DIR/extension.rs:2:48
  |
2 |     let q = inquisition::questions![checkbox { extension: todo!() }];
  |                                                ^^^^^^^^^
