tests/macros/checkbox/extension.rs
fn main() {
    let q = inquisition::questions![checkbox { extension: todo!() }];
}
